tests/fixtures/invalid/read_missing_file.nl
fn main -> string
    read_file("target/nous_missing_file.txt")
